:zap: NFT card component with HTML&CSS

--- a/index.html
+++ b/index.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./style.css>" />
+  <link rel="stylesheet" href="./style.css">
+
   <title>Frontend Mentor | NFT preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+      color: white
+    }
+
+    .attribution a {
+      color: hsl(228, 25%, 57%);
+    }
   </style>
 </head>
+
 <body>
-
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main>
+    <div class="img-container">
+      <img src="./images/image-equilibrium.jpg" alt="equilibrium logo">
+    </div>
+    <h1><a href="#">Equilibrium #3429</a></h1>
+    <p>Our Equilibrium collection promotes balance and calm.</p>
+    <p><span>0.041 ETH</span><span>3 days left</span></p>
+    <div class="card-footer">
+      <div>
+        <img src="images/image-avatar.png" alt="Jules Wyvern">
+      </div>
+      <p>Creation of <a href="#">Jules Wyvern</a></p>
+    </div>
+  </main>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/WoojinParkSoftware/Nft-preview-card.git">Woojin Park</a>.
+  </footer>
 </body>
+
 </html>
